setup cucumber TestNg selenum java project template and Applyed .gitignore and remove ignored files from tracking